{
    "name": "PauseAction",
    "maps": [
        {
            "name": "Pause",
            "id": "d8f9f369-91f4-4e5b-b4ce-4ad5f49fa72e",
            "actions": [
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "08025cad-d09e-4505-8ff3-9aa5930c9844",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InfoPause",
                    "type": "Button",
                    "id": "7b246778-6238-424c-842a-d68bce416813",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e1128138-7ce0-49a9-b379-f204d8bb395a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "900f8aa2-b0c7-4b7b-8046-69def8313cc5",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "609432d1-f4f1-485f-889a-f6f1310edb3a",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InfoPause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}